--- a/public/views/message.ejs
+++ b/public/views/message.ejs
@@ -1,16 +1,6 @@
 <form class="flex items-center gap-4" action="/message" method="post">
-  <textarea
-    rows="1"
-    class="text-baser flex-1 resize-none rounded-3xl px-4 py-0.5"
-    type="text"
-    name="message"
-    id="message"
-    placeholder="Type something..."
-  ></textarea>
-  <button
-    type="submit"
-    class="rounded-full bg-indigo-400 p-2 shadow hover:brightness-105 active:shadow-btnPressed"
-  >
+  <textarea rows="1" class="flex-1 resize-none rounded-3xl px-4 py-0.5 text-base" type="text" name="message" id="message" placeholder="Type something..."></textarea>
+  <button type="submit" class="rounded-full bg-indigo-400 p-2 shadow hover:brightness-105 active:shadow-btnPressed">
     Send
   </button>
 </form>
