--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -5,3 +5,8 @@
 ::-webkit-scrollbar {
   width: 0;
 }
+
+.active {
+  background-color: rgb(129 140 248 / var(--tw-bg-opacity));
+  border-radius: 0.5rem;
+}
